Bug 1591839 - Close Touch Bar race condition. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D52361

--HG--
extra : moz-landing-system : lando